--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 							<span class="content__article_author">Неизвестный автор</span>
 						</div>
 						<div class="content__article_txt">
-							<p>Лето на носу, а с ним и музыкальные фестивали. На каком же из них вы разобьёте свою палатку?</p>
+							<p class="content__article_txt_p_first">Лето на носу, а с ним и музыкальные фестивали. На каком же из них вы разобьёте свою палатку?</p>
 
 							<p>Мы составили список лучших летних фестивалей по всему миру.</p>
 						</div>
@@ -532,7 +532,7 @@
 				</div>
 			</div>
 		</article>
-		<article class="goods__article">
+		<article class="goods__article goods__article2">
 			<picture class="goods__picture">
 				<source srcset="images/shop-item-desk2.jpeg" media="(min-width: 1200px)">
 				<source srcset="images/shop-item-tablet2.jpeg" media="(min-width: 641px) and (max-width: 1199px)">
