--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		Сейчас в тренде
 	</h2>
 	<section class="trends">
-		<article class="trends__article trends__article1">
+		<article class="trends__article trends__article1 trends__article_odd">
 			<div class="trends__article_content">
 				<ul class="content__article_tags_list">
 					<li>
@@ -77,7 +77,7 @@
 				</a>
 			</div>
 		</article>
-		<article class="trends__article trends__article3">
+		<article class="trends__article trends__article3 trends__article_odd">
 			<div class="trends__article_content">
 				<ul class="content__article_tags_list">
 					<li>
@@ -532,7 +532,7 @@
 				</div>
 			</div>
 		</article>
-		<article class="goods__article goods__article2">
+		<article class="goods__article goods__article2 goods__article_even">
 			<picture class="goods__picture">
 				<source srcset="images/shop-item-desk2.jpeg" media="(min-width: 1200px)">
 				<source srcset="images/shop-item-tablet2.jpeg" media="(min-width: 641px) and (max-width: 1199px)">
