--- a/index.html
+++ b/index.html
@@ -508,6 +508,7 @@
 			<picture class="goods__picture">
 				<source srcset="images/shop-item-desk1.jpeg" media="(min-width: 1200px)">
 				<source srcset="images/shop-item-tablet1.jpeg" media="(min-width: 641px) and (max-width: 1199px)">
+				<source srcset="images/shop-item-mobile1.jpeg" media="(max-width: 640px)">
 				<img src="images/shop-item-desk1.jpeg" alt="pillows">
 			</picture>
 			<div class="goods__article_content">
@@ -536,6 +537,7 @@
 			<picture class="goods__picture">
 				<source srcset="images/shop-item-desk2.jpeg" media="(min-width: 1200px)">
 				<source srcset="images/shop-item-tablet2.jpeg" media="(min-width: 641px) and (max-width: 1199px)">
+				<source srcset="images/shop-item-mobile2.jpeg" media="(max-width: 640px)">
 				<img src="images/shop-item-desk2.jpeg" alt="pillows">
 			</picture>
 			<div class="goods__article_content">
@@ -561,6 +563,7 @@
 			<picture class="goods__picture">
 				<source srcset="images/shop-item-desk3.jpeg" media="(min-width: 1200px)">
 				<source srcset="images/shop-item-tablet3.jpeg" media="(min-width: 641px) and (max-width: 1199px)">
+				<source srcset="images/shop-item-mobile3.jpeg" media="(max-width: 640px)">
 				<img src="images/shop-item-desk3.jpeg" alt="pillows">
 			</picture>
 			<div class="goods__article_content">
