--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
 			</div>
 		</div>
 	</header>
-	<h2 class="content__h2">
+	<h2 class="content__title">
 		Сейчас в тренде
 	</h2>
 	<section class="trends">
 		<article class="trends__article trends__article1 trends__article_odd">
+			<img src="images/trend1.png" class="trends__img">
 			<div class="trends__article_content">
 				<ul class="content__article_tags_list">
 					<li>
@@ -62,6 +63,7 @@
 			</div>
 		</article>
 		<article class="trends__article trends__article2">
+			<img src="images/trend2.png" class="trends__img">
 			<div class="trends__article_content">
 				<ul class="content__article_tags_list">
 					<li>
@@ -77,7 +79,8 @@
 				</a>
 			</div>
 		</article>
-		<article class="trends__article trends__article3 trends__article_odd">
+		<article class="trends__article trends__article_odd">
+			<img src="images/trend3.png" class="trends__img">
 			<div class="trends__article_content">
 				<ul class="content__article_tags_list">
 					<li>
@@ -98,7 +101,8 @@
 				</a>
 			</div>
 		</article>
-		<article class="trends__article trends__article4">
+		<article class="trends__article">
+			<img src="images/trend4.png" class="trends__img">
 			<div class="trends__article_content">
 				<ul class="content__article_tags_list">
 					<li>
@@ -502,7 +506,7 @@
 			</section>
 		</aside>
 	</div>
-	<h2 class="content__h2">Наши изделия</h2>
+	<h2 class="content__title">Наши изделия</h2>
 	<section class="goods">
 		<article class="goods__article goods__article1">
 			<picture class="goods__picture">
@@ -630,7 +634,7 @@
 		<div class="popup__content">
 			<label for="popup__toggle" class="popup__close">&times;</label>
 			<form class="popup" action="#">
-				<h2 class="content__h2 popup__h2">
+				<h2 class="content__title popup__title">
 					Ваш фидбек
 				</h2>
 				<label for="popup__frequency" class="popup__label popup__label_first">
